# ai-engineering-stack

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: eval.yml
evals/: lantern.yaml
lantern/: __init__.py  agent.py  bm25.py  chunk.py  cli.py  evals.py  index.py  llm.py  mcp.py  rerank.py  search.py  summarize.py  tools.py  trace.py
weeks/01-foundations/: README.md  exercise.md
weeks/02-structured-output/: README.md  exercise.md
weeks/03-tool-use/: README.md  exercise.md
weeks/04-embeddings/: README.md  exercise.md
weeks/05-hybrid-evals/: README.md  exercise.md
weeks/06-agents/: README.md  exercise.md
weeks/07-production/: README.md  exercise.md
weeks/08-benchmark/: README.md  exercise.md
weeks/09-production-retrieval/: README.md  exercise.md
weeks/10-production-ops/: README.md  exercise.md
